# kafka-flink-demo

./: .gitignore  Presentation1.pptx  README.md  docker-compose.yml  pyproject.toml  ~$Presentation1.pptx
confluent_cloud_demo/: azurePBI.tf  confluentCloud.tf  confluentConnectors.tf  confluentPBI.tf  demo_start.sh  demo_stop.sh  providers.tf  variables.tf
confluent_cloud_demo/schemas/: credit_card.avsc
confluent_platform_demo/: docker-compose.yml
image/: connect.Dockerfile
infrastructure/: Confluent-Flink-Demo.drawio
kafka_flink_demo/: Databricks-kafka-avro-consumer.py  __init__.py  a.py  b.py
